# loracamera

./: .gitignore  README.md
local/: CMakeLists.txt  Makefile
local/components/arduino/: CMakeLists.txt
local/main/: CMakeLists.txt  local.cpp
local/main/heltec/: heltec.cpp
remote/: CMakeLists.txt  Makefile  OLED_LoRa_Sender.ino  sdkconfig  sdkconfig.old
remote/components/arduino/cores/esp32/: HardwareSerial.cpp
remote/main/: CMakeLists.txt  remote.cpp
remote/main/VC0706/: Adafruit_VC0706.cpp  Adafruit_VC0706.h
remote/main/heltec/: heltec.h
server/: listen.py
